[package]
name = "bindgen"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-rt"
keywords = ["parser", "generator", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"


[dependencies]
anyhow = "1.0.81"
wit-parser = "0.202.0"
wit-bindgen-c = "0.24.0"
wit-bindgen-core = "0.24.0"
wit-bindgen-csharp = "0.24.0"
wit-bindgen-rust = "0.24.0"


[features]
default = []
