[package]
name = "notedown-wasi"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-rt"
keywords = ["parser", "generator", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"


[lib]
name = "wasi_notedown"
crate-type = ["cdylib", "rlib"]

[dependencies]
url = "2.5.0"
wit-bindgen = "0.23.0"


[dev-dependencies]
wit-parser = "0.202.0"
wit-bindgen-core = "0.23.0"
wit-bindgen-rust = "0.23.0"

[features]
default = []
