[package]
name = "notedown-wasi"
version = "0.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "Cross-language notedown sharing of intermediate representations"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/notedown-wasi"
keywords = ["grammar"]
categories = ["wasm", "compilers", "text-processing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"


[lib]
name = "wasi_notedown"
crate-type = ["cdylib", "rlib"]

[dependencies]
url = "2.5.0"
wit-bindgen = "0.23.0"

[features]
default = []
